added exam module and custom directive

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,69 @@
  *= require_tree .
  *= require_self
  */
+.ng-modal-overlay {
+  /* A dark translucent div that covers the whole screen */
+  position:absolute;
+  z-index:9999;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:#fff;
+  opacity: 0.8;
+}
+.ng-modal-dialog {
+  /* A centered div above the overlay with a box shadow. */
+  z-index:10000;
+  position: absolute;
+  width: 50%; /* Default */
+
+  /* Center the dialog */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  background-color: #fff;
+  box-shadow: 4px 4px 80px #000;
+  border-radius: 10px;
+}
+.ng-modal-dialog-content {
+  padding:10px;
+  text-align: left;
+}
+.ng-modal-close {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 120%;
+  display: inline-block;
+  z-index: 99999999;
+  font-weight: bold;
+  font-family: 'arial', 'sans-serif';
+}
+
+.question {
+	font: 14px/20px arial;
+	margin-left: 10px;
+}
+.answer {
+	font: 12px/10px arial;
+	margin-left: 20px;
+	word-spacing: 4px;
+	margin-bottom: 40px;
+}
+.res-block {
+	height: 200px;
+	border: 1px solid lightgreen;
+	background: lightgreen;
+	box-shadow: 4px 4px solid green;
+	padding: 10px;
+}
+
+.res-block p {
+	font-weight: 500;
+	font: 13px/20px arial;
+}
