--- a/public/templates/users/_form.html
+++ b/public/templates/users/_form.html
@@ -1,12 +1,12 @@
 <div class="form-group" ng-class="{'has-error' : submitted && userForm.first_name.$invalid}">
-    <label class="control-label col-md-3">First name <span class="required">* </span> </label>
+    <label class="control-label col-md-4">First Name <span class="required">* </span> </label>
     <div class="col-md-5">
         <input type="text" name="first_name" class="form-control" ng-model="user.first_name" required placeholder="first name"/>
     </div>
     <p ng-show=" submitted && userForm.first_name.$invalid" class="help-block">First name is required.</p>
 </div>
 <div class="form-group" ng-class="{'has-error' : submitted && userForm.last_name.$invalid}">
-    <label class="control-label col-md-3">Last name <span class="required">* </span> </label>
+    <label class="control-label col-md-3">Last Name <span class="required">* </span> </label>
     <div class="col-md-5">
         <input type="text" name="last_name" class="form-control" ng-model="user.last_name" required placeholder="last name"/>
     </div>
