--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 		      	<img src="/assets/home.png" height="20px" width="20px">
 		      </a>
 			  <ul class="nav navbar-nav navbar-right">
-		        <li><a href="/">Users</a></li>
-		        <li> <a href="/exam">Exam</a> </li>
+		        <li><a href="#/users">Users</a></li>
+		        <li> <a href="#/exams">Exam</a> </li>
 		      </ul>
 		    </div>
 		  </div>
